@@ -1,3 +1,7 @@
+2007-06-05  George Giolfan  <georgegiolfan@yahoo.com>
+
+	* Button.cs: Some cleaning.
+
 2007-06-04  George Giolfan  <georgegiolfan@yahoo.com>
 
 	* DockPanel.cs: Fixed MeasureOverride.
